# GraphTheory_Exercises

./: .gitignore  Algorithms.cpp  Algorithms.hpp  BaseGraph.cpp  BaseGraph.hpp  CMakeLists.txt  ComplexityAlgorithms.cpp  ComplexityAlgorithms.hpp  DirectedGraph.cpp  DirectedGraph.hpp  Graph.cpp  Graph.hpp  README.md  algorithms.cpp  algorithms.hpp  backpack.cpp  backpack.hpp  exercises.cpp  exercises.hpp  graphAlgorithms.cpp  graphAlgorithms.hpp  knapsackProblem.cpp  knapsackProblem.hpp  main.cpp  scheduler.cpp  scheduler.hpp  task.cpp  task.hpp
data/: data111.txt  graph15.txt  graph25.txt  graph34.txt  onlinetest1.txt  onlinetest10.txt  onlinetestScheduler.txt  onlinetestScheduler2.txt  test.txt
